--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
@@ -33,6 +32,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
