--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@babel/register": "^7.23.7",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
@@ -32,7 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "sequelize-cli": "^6.6.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
